...
      ),
      body: Center(
        child: Column(
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            Text(
              key: ValueKey('hometitle'),
              "Home" // update test case if this is changed
              ),
            TextButton(
              key: ValueKey('matches'),
              onPressed: ()
              {
...
